objects/parentC__c.object
<CustomObject>
    <fields>
        <fullName>parentTextFld__c</fullName>
        <externalId>true</externalId>
        <label>parentTextFld</label>
        <length>19</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>parentfld2__c</fullName>
        <label>parentfld2</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parentfld3__c</fullName>
        <label>parentfld3</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <label>parentC</label>
    <nameField>
        <label>parentC Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>parentCs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>